--- a/public/scss/partials/_variables.scss
+++ b/public/scss/partials/_variables.scss
@@ -3,7 +3,7 @@
 ////////////////////////////////*/
 $red: #fc5a5f;
 $green: #20af69;
-$promo-color: #f39c12;
+$promo-color: #ffc400;
 $border-color: #f9f9f9;
 $bg1: #fff;
 $bg2: #f0f0f1;
