--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -518,7 +518,8 @@ input[type="checkbox"]:checked + span:before {
     width: 17px; height: 17px;
     background: white;
     border-radius: 3px;
-    @include box-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));
+    border: 1px solid $grey;
+    //@include box-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));
 }
 
 /* Aspect général de la coche */
@@ -526,10 +527,12 @@ input[type="checkbox"]:not(:checked) + span:after,
 input[type="checkbox"]:checked + span:after {
     content: '';
     position: absolute;
-    top: 0;left: -18px;
-    width: 14px; height: 15px;
-    background: url(../img/sign-checkbox.png) no-repeat center center;
+    top: 2px;left: -20px;
+    width: 17px; height: 17px;
+    background: url(../img/search/check.png) no-repeat center center;
+    background-size: cover;
     @include transition(all .2s);
+    border-radius: 3px;
 }
 /* Aspect si "pas cochée" */
 input[type="checkbox"]:not(:checked) + span:after {
@@ -540,6 +543,7 @@ input[type="checkbox"]:not(:checked) + span:after {
 input[type="checkbox"]:checked + span:after {
     opacity: 1;
     transform: scale(1);
+    background-color: $hairfie;
 }
 input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type="checkbox"].checkbox-disabled:checked + span:after {
     content: '';
@@ -832,7 +836,7 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
     z-index: 150;
     min-width: 100%;
     width: 100vw;
-    height: 46px;
+    height: 0px;
     bottom: 0;
 }
 .btn-mobile-fixed {
