--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -68,9 +68,9 @@
         font-size: 1.5em;
         .filter-header {
             background-color: $bg4;
-            font-size: 0.8em;
+            color: $darkgrey;
+            font-size: 1.2em;
             height: 60px;
-            text-transform: uppercase;
             padding-left: 10px;
             @include flex-center;
             text-align: left;
@@ -253,6 +253,13 @@
                 right: 10px;
                 @include flex-center;
             }
+        }
+        .btn-close {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            color: $hairfie;
+            font-size: 2em;
         }
     }
     .subfilters {
@@ -644,6 +651,7 @@
                 float: left;
                 width: 167px;
                 height: 167px;
+                position: relative;
                 @media screen and (max-width: $screen-xs-max) {
                     width: 100%;
                     height: auto;
@@ -667,8 +675,18 @@
                     @media screen and (max-width: $screen-xs-max) {
                         width: 100%;
                         height: 124px;                    
+                    }
                 }
-            }
+                .promo-bloc {
+                    background-color: $promo-color;
+                    color: white;
+                    font-size: 1.5em;
+                    font-weight: $regular;
+                    position: absolute;
+                    padding: 5px 10px;
+                    right: 0;
+                    top: 15px;
+                }
             }
             .info-bloc {
                 display: inline-block;
@@ -1032,8 +1050,8 @@
                             content: ' ';
                             background: url(../img/search/icon-promo.png) no-repeat center center;
                             background-size: contain;
-                            width: 18px;
-                            height: 18px;
+                            width: 20px;
+                            height: 20px;
                             position: absolute;
                             left: 28px;
                         }
@@ -1067,10 +1085,10 @@
             input {
                 height: 45px;
                 -webkit-appearance: none;
-                border:0;
                 border: 1px solid $grey5;
                 box-shadow: none !important;
                 letter-spacing: 1px;
+                border-radius: 2px;
                 // border-right: 0;
                 &:focus {
                     outline: none !important;
@@ -1083,6 +1101,7 @@
                 border: 1px solid $grey5;
                 border-top-left-radius: 0;
                 border-bottom-left-radius: 0;
+                border-radius: 2px;
                 border-color: $grey5;
             }
             .input-group-addon:last-child {
@@ -1204,6 +1223,14 @@
                     background:$red;
                     @include box-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));
                 }
+            }
+        }
+        .price > .tag-list > label {
+            font-size: 1.6em;
+            .price-notice {
+                font-size: 0.8em;
+                color: $grey;
+                margin-left: 5px;
             }
         }
     }
