--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -112,7 +112,7 @@
                     width: 20px;
                     height: 20px;
                     line-height: 25px;
-                    background: url(../img/resa/icon-promo.png) no-repeat center left;
+                    background: url(../img/search/icon-promo.png) no-repeat center left;
                     background-size: contain;
                     margin-right: 10px;
                     margin-top: 4px;
