--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14632,7 +14632,7 @@ section.home-search .home-search-mobile {
         width: 20px;
         height: 20px;
         line-height: 25px;
-        background: url(../img/resa/icon-promo.png) no-repeat center left;
+        background: url(../img/search/icon-promo.png) no-repeat center left;
         background-size: contain;
         margin-right: 10px;
         margin-top: 4px; }
